--- a/socios/templates_p/cruds_template/base.html
+++ b/socios/templates_p/cruds_template/base.html
@@ -30,7 +30,7 @@
 
     {% block extra_head %}{% endblock %}
 </head>
-<body class="hold-transition skin-blue sidebar-mini {% block body_class %}base{% endblock body_class %}">
+<body class="hold-transition skin-red sidebar-mini {% block body_class %}base{% endblock body_class %}">
 
 {% block body %}
     <div class="wrapper">
